syntax = "proto3";

package eosio.token.v1;

message Accounts {
    repeated Account items = 1;
}

message Account {
    string contract = 1;
    string symcode = 2;
    string account = 3;
    string balance = 4;
}

message Stats {
    repeated Stat items = 1;
}

message Stat {
    // trace information
    string trx_id = 1;
    uint32 action_index = 2;

    // contract & scope
    string contract = 3;
    string symcode = 4;

    // data payload
    string issuer = 5;
    string max_supply = 6;
    string supply = 7;

    // extras
    int64 amount = 9;
    uint32 precision = 10;
}

message TransferEvents {
    repeated TransferEvent items = 1;
}

message TransferEvent {
    // transaction
    string trx_id = 1;
    uint32 action_ordinal = 2;

    // contract & scope
    string account = 3;
    string symcode = 4;

    // data payload
    string from = 5;
    string to = 6;
    string quantity = 7;
    string memo = 8;

    // extras
    int64 amount = 9;
    uint32 precision = 10;
}
